util refactoring